syntax = "proto3";
package ET;


message ObjectQueryResponse // IActorResponse
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;

	Entity entity = 1;
}